Creating path to delete email from email id
